[gd_scene load_steps=2 format=3 uid="uid://c0eldvamc853w"]

[ext_resource type="Script" path="res://scenes/score_counter.gd" id="1_qiu3j"]

[node name="ScoreCounter" type="HBoxContainer"]
offset_right = 112.0
offset_bottom = 54.0
script = ExtResource("1_qiu3j")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Team"
alignment = 2
expand_to_text_length = true
flat = true

[node name="ColorRect" type="ColorRect" parent="LineEdit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.12549)

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PlusButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "+"

[node name="MinusButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "-"

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"
vertical_alignment = 1
